<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context="com.example.muchmoremood.MBTEDescription" >

    <TextView
        android:id="@+id/textMood"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/Text_Mood"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textBehaviour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:text="@string/Text_Behaviour"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textEnvironment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        
        android:layout_marginTop="19dp"
        android:text="@string/Text_Environment"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textThought"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        
        android:layout_marginTop="24dp"
        android:text="@string/Text_Thought"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/btnMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="104dp"
        android:text="@string/Back_Main" />

</LinearLayout>