<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:gravity="center_horizontal"
        android:text="@string/adding_MBTE"
        android:textSize="30sp" />

    <Button
        android:id="@+id/btnTransfer"
        android:layout_width="232dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnDscrPage"
        android:layout_alignLeft="@+id/btnDscrPage"
        android:layout_marginBottom="14dp"
        android:gravity="center"
        android:text="@string/Transfer" />

    <Button
        android:id="@+id/btnDscrPage"
        android:layout_width="268dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="17dp"
        android:text="@string/Button_DescPage" />

    <Spinner
        android:id="@+id/spinnerThought"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnTransfer"
        android:layout_alignLeft="@+id/spinnerEnvironment"
        android:entries="@array/arrayThought" />

    <Spinner
        android:id="@+id/spinnerEnvironment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/spinnerBehaviour"
        android:layout_centerVertical="true"
        android:entries="@array/arrayEnvironment" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/spinnerThought"
        android:layout_alignRight="@+id/textView4"
        android:layout_marginBottom="17dp"
        android:text="@string/add_Thought" />

    <Spinner
        android:id="@+id/spinnerBehaviour"
        android:layout_width="111dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/spinnerEnvironment"
        android:layout_alignRight="@+id/textView1"
        android:entries="@array/arrayBehaviour" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView5"
        android:layout_centerVertical="true"
        android:text="@string/add_Environment" />

    <Spinner
        android:id="@+id/spinnerMood"
        android:layout_width="111dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/spinnerBehaviour"
        android:layout_alignLeft="@+id/spinnerBehaviour"
        android:entries="@array/arrayMood" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/spinnerMood"
        android:layout_alignLeft="@+id/textView2"
        android:layout_marginBottom="19dp"
        android:text="@string/add_mood" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/spinnerBehaviour"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="22dp"
        android:text="@string/add_Behaviour" />

"

</RelativeLayout>